@@ -1,3 +1,9 @@
+2007-05-03  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py (ObjectList.insert): 
+	* tests/test_ObjectList.py (MethodTest.testInsert): 
+	Implement, add tests.
+
 2007-05-03  Ronaldo Maia  <romaia@async.com.br>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
